# airbnb_scraping_tool

./: .env.example  .gitattributes  .gitignore  =0.23  PLAN.md  README.md  _c2.sh  _c3.sh  _c4.sh  _commit.sh  _ship.sh  cli.py  config.py  errors.py  geocode.py  pipeline.py  pyproject.toml  scanner.db  scanner.db-shm  scanner.db-wal
.claude/: launch.json
.conductor/: audit-report.md
airbnb_scraping_tool/: __init__.py
airbnb_scraping_tool/db/: __init__.py  models.py  repo.py
airbnb_scraping_tool/extraction/: __init__.py  extractor.py  pretrim.py
airbnb_scraping_tool/schemas/: __init__.py  listing.py  scrape.py
airbnb_scraping_tool/scrapers/: __init__.py  base.py
dashboard/: app.py
dashboard/components/: charts.py  detail_panel.py  map_view.py  results_table.py
dashboard/pages/: history.py  results.py  search.py
db/: __init__.py  models.py  repo.py
demo/: __init__.py  seed.py
enrichment/: __init__.py  agent.py  run_enrich.py
extraction/: batch.py  extractor.py  pretrim.py  provider.py
logs/: 1.jsonl  2.jsonl
schemas/: __init__.py  listing.py  models.py  search.py  search_query.py
scrapers/: __init__.py  airbnb.py  base.py  booking.py  constants.py  expedia.py  fallback_api.py  google_hotels.py  hostelworld.py  html_base.py  registry.py  vrbo.py
tests/: __init__.py  conftest.py  test_airbnb.py  test_airbnb_scraper.py  test_base.py  test_batch.py  test_booking_scraper.py  test_charts.py  test_db.py  test_dedup.py  test_demo_seed.py  test_detail_panel.py  test_enrichment.py  test_extractor.py  test_fallback_api.py  test_geocode.py  test_history.py  test_logging_retry_cancel.py  test_map_view.py  test_new_scrapers.py  test_pipeline.py  test_pipeline_fallback.py  test_pretrim.py  test_repo.py  test_results_page.py  test_results_table.py  test_schemas.py
tests/fixtures/: airbnb_page1.json  airbnb_page2.json  airbnb_search.json  booking_page.html  sample_airbnb.json  stays_search_response.json
tests/fixtures/airbnb/: explore_tabs_barcelona.json  stays_search_lisbon.json  stays_search_tokyo.json
tests/fixtures/booking/: captcha_page.html  search_results.html  search_results_page2.html
