[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airbnb-scraping-tool"
version = "0.1.0"
description = "Short-Stay Market Scanner"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
