[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airbnb-scraping-tool"
version = "0.1.0"
description = "Short-stay market scanner: scrape, extract, store, and present listings."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "db"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.12"
strict = true
