[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roomradar"
version = "0.1.0"
description = "Roomradar: scrape Airbnb/hotel listings for an area, extract them with Claude, store, and present in a dashboard."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.69",
    "click>=8.0",
    "httpx>=0.27",
    "playwright>=1.44",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]

[project.scripts]
roomradar = "cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "db", "extraction", "schemas", "dashboard"]
# Root-level single-file modules that aren't inside a package directory.
force-include = { "cli.py" = "cli.py", "config.py" = "config.py", "pipeline.py" = "pipeline.py", "errors.py" = "errors.py" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.12"
strict = true
